--- a/P1-Auditoria/Audit-A1.ipynb
+++ b/P1-Auditoria/Audit-A1.ipynb
@@ -587,7 +587,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Para facilitar el tratamiento de los datos categóricos es conveniente generar atributos dummy para representar los distintos valores que un atributo puede tomar. Estos atributos bummy están evaluados a 1 si el elemento pertenece a la categoria indicada para el atributo indicado y a 0 si pertenece a otra categoria de ese mismo atributo."
+    "Para facilitar el tratamiento de los datos categóricos es conveniente generar atributos dummy para representar los distintos valores que un atributo puede tomar. Estos atributos dummy están evaluados a 1 si el elemento pertenece a la categoria indicada para el atributo indicado y a 0 si pertenece a otra categoria de ese mismo atributo."
    ]
   },
   {
