--- a/parte 2/Parte2.ipynb
+++ b/parte 2/Parte2.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Importación de los datos\n",
+    "\n",
+    "__Primero de todo, importamos los datos con los que vamos a trabajar y los distintos módulos que vamos a emplear.__"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 50,
    "metadata": {},
@@ -3851,13 +3860,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [],
    "source": [
     "def logRegFactory(full_dataset, MI1, MI2, CHI1, CHI2, pca_dataset, lda_dataset):\n",
     "    print('Clase 1 vs. Clase 2')\n",
-    "    print('Logistic Regression     tp tn fp fn prec accu sens spec auc_roc\\n')\n",
+    "    print('Logistic Regression     tp tn fp fn prec accu sens spec auc_roc')\n",
     "    kappa = full_dataset[full_dataset.Wine!=3]\n",
     "    logReg(kappa,13,'Full Data')\n",
     "    kappa = full_dataset[full_dataset.Wine!=3][['Wine',MI1]]\n",
@@ -3937,7 +3946,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [
     {
@@ -3946,7 +3955,6 @@
      "text": [
       "Clase 1 vs. Clase 2\n",
       "Logistic Regression     tp tn fp fn prec accu sens spec auc_roc\n",
-      "\n",
       "Full Data - criterio 1: 18 19 0 2 1.00 0.95 0.90 1.00 0.95\n",
       "Full Data - criterio 2: 19 18 2 0 0.90 0.95 1.00 0.90 0.95\n",
       " \n",
@@ -4049,7 +4057,6 @@
     }
    ],
    "source": [
-    "\n",
     "logRegFactory(normaldf, MIvar1, MIvar2, CHIvar1, CHIvar2, pca, lda)"
    ]
   },
