--- a/parte 2/Parte2.ipynb
+++ b/parte 2/Parte2.ipynb
@@ -4066,11 +4066,17 @@
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Podemos concluir que por lo general:\n",
+    "\n",
+    "-Al aplicar el mismo criterio para obtener proyecciones (por ejemplo MI o PCA) obtenemos mejorer resultados si hacemos la regresion logistica con 2 o 3 atributos que solo con uno.\n",
+    "\n",
+    "-Podemos obtener resultados de dimension 1, 2 o 3 que sean competitivos con los obtenidos al aplicar la regresin al datset completo (de dimensionalidad 24).\n",
+    "\n",
+    "Además, en algunos casos con mayor dimensionalidad obtenemos peores resultados por haver hecho overfitting al dataset de entrenamiento,"
+   ]
   }
  ],
  "metadata": {
@@ -4089,7 +4095,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
